adding updateMovie and deleteMovie API
